<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, RemoteController!</string>
    <string name="app_name">RemoteController</string>
    <string name="btn_find">Find Device</string>
    <string name="bt_not_enabled_leaving">Bluetooth was not enabled. Leaving Remote Controller</string>
    <string name="title_paired_devices">Paired Devices</string>
    <string name="title_other_devices">Other Available Devices</string>
    <string name="button_scan">Scan for devices</string>
    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices..</string>
    <string name="none_found">No devices found</string>
    <string name="select_device">select a device to connect</string>
    <string name="connect">Connect a device</string>
    <string name="discoverable">Make discoverable</string>
    <string name="title_connected_to">connected: </string>
    <string name="title_connecting">connecting..</string>
    <string name="title_not_connected">not connected</string>
    <string name="hint">inserisci messaggio</string>
    <string name="txt_button">TEST</string>
    <string name="W">W</string>
    <string name="A">A</string>
    <string name="S">S</string>
    <string name="D">D</string>
</resources>
